# Snibble-Server

./: .gitignore  README.md
auth_server/: CMakeLists.txt  main.cpp
auth_server/src/: AUTH_MANAGER.md  AuthManager.cpp  AuthManager.h  ENCRYPTION_MANAGER.md  EncryptionManager.cpp  EncryptionManager.h
chat_server/: CMakeLists.txt  Dockerfile  main.cpp
chat_server/src/: CLIENT_HANDLER.md  ClientHandler.cpp  ClientHandler.h  MESSAGE_HANDLER.md  MessageHandler.cpp  MessageHandler.h  SOCKET_SERVER.md  SocketServer.cpp  SocketServer.h
shared/include/: DATABASE_MANAGER.md  DatabaseManager.h
shared/src/: DatabaseManager.cpp
